EDAN01/minizinc-1.6/tests/flattening/test-abort1.err_exp
mzn2fzn:
  error: 
  test-abort1.mzn:5 
  In variable declaration for 'x'. 
  In coercion. 
  In 'abort' expression. 
  Abort: "This assignment aborts!"
