EDAN01/minizinc-1.6/tests/flattening/test-abort1.mzn
% RUNS ON mzn2fzn

% Test abort/1.
%
int: x = abort("This assignment aborts!");
solve satisfy;
